--- a/app/views/groups/_posts.html.erb
+++ b/app/views/groups/_posts.html.erb
@@ -1,5 +1,5 @@
 <% if group.posts.present? %>
-  <% group.posts.each do |post| %>
+  <% group.posts.reverse_each do |post| %>
     <%= link_to group_post_path(group, post), class: "flex flex-row card rounded-box bg-white shadow-xl w-full mb-4 p-4", id: "post-#{post.id}" do %>
       <div class="avatar">
         <div class="h-12 w-12 rounded-full">
@@ -9,14 +9,14 @@
       <div class="pl-6">
         <div class="flex flex-row">
           <div class="font-bold"><%= post.user.username %></div>
-          <div class="ml-4 text-neutral-300">記録日: <%= post.drink_record.start_time.strftime("%F") %></div>
+          <div class="ml-4 text-neutral-300">記録作成日: <%= post.drink_record.created_at.strftime('%Y年%m月%d日') %></div>
         </div>
         <div class="text-neutral-900"><%= post.content %></div>
       </div> 
     <% end %>
   <% end %>
 <% else %>
-  <div class="card rounded-box bg-white shadow-xl w-full mt-4 p-4">
+  <div class="card rounded-box bg-white shadow-xl w-full mb-4 p-4">
     <div class="pl-6">
       <%= t '.no_post' %>
     </div>
