--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -16,7 +16,7 @@
       <label tabindex="0" class="btn btn-square btn-ghost">
         <i class="fa fa-bars"></i> 
       </label>
-      <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-32">
+      <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-xl dropdown-content bg-base-100 rounded-box w-max">
         <li><%= link_to t('defaults.top_page'), root_path %></li>
         <li><%= link_to t('defaults.community'), community_posts_path %></li>
       </ul>
