--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -23,7 +23,7 @@
             <%= image_tag current_user.image %>
           </div>
         </label>
-        <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box w-32">
+        <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-xl dropdown-content bg-base-100 rounded-box w-max">
           <% if current_user.admin? %>
             <li>
               <%= link_to t('defaults.admin_page'), rails_admin_path %>
