--- a/app/views/groups/_posts.html.erb
+++ b/app/views/groups/_posts.html.erb
@@ -1,5 +1,5 @@
-<% if group.posts.present? %>
-  <% group.posts.reverse_each do |post| %>
+<% if posts.present? %>
+  <% posts.each do |post| %>
     <%= link_to group_post_path(group, post), class: "flex flex-row card rounded-box bg-white shadow-xl w-full mb-4 p-4", id: "post-#{post.id}" do %>
       <div class="avatar">
         <div class="h-12 w-12 rounded-full">
@@ -7,9 +7,9 @@
         </div>
       </div>
       <div class="pl-6">
-        <div class="flex flex-row">
+        <div class="flex flex-col md:flex-row">
           <div class="font-bold"><%= post.user.username %></div>
-          <div class="ml-4 text-neutral-300">記録作成日: <%= post.drink_record.created_at.strftime('%Y年%m月%d日') %></div>
+          <div class="ml-4 text-neutral-300 text-xs md:text-sm">記録作成日: <%= post.drink_record.created_at.strftime('%Y年%m月%d日') %></div>
         </div>
         <div class="text-neutral-900"><%= post.content %></div>
       </div> 
