--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -86,6 +86,6 @@
         </div>
       </div>
     </div>
-    <%= render partial: 'groups/posts', locals: { group: @group } %>
+    <%= render partial: 'groups/posts', locals: { posts: @posts, group: @group } %>
   </div>
 </div>
