--- a/app/views/community_posts/edit.html.erb
+++ b/app/views/community_posts/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>CommunityPosts#edit</h1>
-<p>Find me in app/views/community_posts/edit.html.erb</p>
+<% content_for(:title, t(".title")) %>
+<div class="w-4xl flex-auto">
+  <div class="flex flex-col p-4 max-w-4xl mx-auto">
+    <div class="card rounded-xl bg-white shadow-xl">
+      <div class="card-body mx-auto items-center py-6 text-center">
+        <h2 class="card-title"><%= t '.title' %></h2>
+      </div>
+      <%= render partial: 'community_posts/post_form', locals: { community_post: @community_post } %>
+    </div>
+  </div>
+</div>
