--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,11 @@
-<% content_for(:title, @post.drink_record.start_time.strftime("%F") + t(".title")) %>
-<div class="mx-auto max-w-4xl overflow-hidden bg-base-100 py-4 flex-auto">
-  <div class="max-w-full mx-auto sm:px-4 pt-5">
-    <div class="flex flex-row mb-3">
+<% content_for(:title, @post.drink_record.start_time.strftime("%Y年%m月%d日") + t(".title")) %>
+<div class="w-4xl py-4 flex-auto">
+  <div class="max-w-4xl mx-auto sm:px-4 pt-5">
+    <div class="mb-3">
       <div class="px-4">
         <!-- 掲示板内容 -->
         <article class="flex flex-col min-w-full rounded break-words border bg-white border-gray-300">
-          <div class="flex-auto p-6">
+          <div class="flex-auto p-6 min-w-full">
             <div class='flex flex-row'>
               <div class="avatar">
                 <div class="h-12 w-12 rounded-full">
@@ -25,7 +25,7 @@
             <ul class="list-none">
               <li class="inline-block mr-2 text-neutral-300">記録作成日: <%= @post.drink_record.created_at.strftime('%Y年%m月%d日') %></li>
             </ul>
-          <%= render 'shared/like_btn', { post: @post } %>
+            <%= render 'shared/like_btn', { post: @post } %>
           </div>
         </article>
       </div>
