--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,10 +7,10 @@
     <% end %>
   </div>
   <div class="navbar-end">
-    <ul class="menu menu-horizontal invisible px-1 md:visible">
+    <ul class="menu menu-horizontal px-1 max-md:hidden">
       <li><%= link_to t('defaults.explanation'), root_path %></li>
     </ul>
-    <ul class="menu menu-horizontal invisible px-1 md:visible">
+    <ul class="menu menu-horizontal px-1 max-md:hidden">
       <li><%= link_to t('defaults.community'), community_posts_path %></li>
     </ul>
     <% if current_user.general? || current_user.admin? %>
@@ -33,18 +33,19 @@
             <li>
               <%= link_to t('defaults.my_page'), profile_path %>
             </li>
-            <ul>
-              <%= t('defaults.group') %>
-                <% if current_user.groups.exists? %>
-                  <% current_user.groups.each do |group| %>
-                    <% if group.persisted? %>
-                      <li>
-                        <%= link_to group.name, group_path(group) %>
-                      </li>
-                    <% end %>
+            <li>
+              <a><%= t('defaults.group') %></a>
+              <% if current_user.groups.exists? %>
+              <ul>
+                <% current_user.groups.each do |group| %>
+                  <% if group.persisted? %>
+                    <li>
+                      <%= link_to group.name, group_path(group) %>
+                    </li>
                   <% end %>
                 <% end %>
-            </ul>
+              </ul>
+              <% end %>
           <% elsif current_user.invitee? %>
             <li>
               <%= t('defaults.group') %>
@@ -58,7 +59,7 @@
             </li>
           <% end %>
           <li class="md:hidden">
-            <li><%= link_to t('defaults.community'), community_posts_path %></li>
+            <%= link_to t('defaults.community'), community_posts_path %>
           </li>
           <li class="md:hidden">
             <%= link_to t('defaults.explanation'), root_path %>
