--- a/app/views/community_posts/show.html.erb
+++ b/app/views/community_posts/show.html.erb
@@ -42,23 +42,23 @@
             <ul class="list-none">
               <li class="inline-block mr-2 text-neutral-300">投稿日: <%= @community_post.created_at.strftime('%Y年%m月%d日') %></li>
             </ul>
-            <%# <%= render 'shared/like_btn', { post: @community_post } %> %>
+            <%= render 'community_posts/like_btn', { community_post: @community_post } %>
           </div>
         </article>
       </div>
     </div>
 
     <!-- コメントフォーム -->
-    <%# <div class="px-4"> %>
-      <%# <%= render 'post_comments/form', { group: @group, post: @post, comment: @post_comment } %> %>
-    <%# </div> %>
+    <div class="px-4">
+      <%= render 'community_post_comments/form', { community_post: @community_post, comment: @community_post_comment } %>
+    </div>
 
     <!-- コメントエリア -->
-    <%# <% if @post_comments.present? %> %>
-      <%# <div class="divider"></div> %>
-      <%# <div class="px-4"> %>
-        <%# <%= render 'post_comments/comments', { comments: @post_comments } %> %>
-      <%# </div> %>
-    <%# <% end %> %>
+    <% if @community_post_comments.present? %>
+      <div class="divider"></div>
+      <div class="px-4">
+        <%= render 'community_post_comments/comments', { comments: @community_post_comments } %>
+      </div>
+    <% end %>
   </div>
 </div>
