Fix&Add:RSpec実行環境の修正とコミュニティポスト機能のシステムスペック

--- a/app/views/post_comments/_form.html.erb
+++ b/app/views/post_comments/_form.html.erb
@@ -8,7 +8,7 @@
       <div class="form-control">
         <%= f.text_area :message, class: 'textarea textarea-bordered max-w-full mb-3', id: 'js-new-comment-body', placeholder: PostComment.human_attribute_name(:message) %>
       </div>
-      <%= f.submit t('defaults.post'), class: 'btn btn-primary' %>
+      <%= f.submit t('defaults.post_comment'), class: 'btn btn-primary' %>
     <% end %>
   </div>
 </div>
