--- a/app/views/community_posts/index.html.erb
+++ b/app/views/community_posts/index.html.erb
@@ -2,7 +2,7 @@
 <div class="w-4xl flex-auto">
   <div class="flex flex-col p-4 max-w-4xl mx-auto">
     <h2 class="title-font text-lg font-semibold"><%= t '.title' %></h2>
-    <% if @user.present? %>
+    <% if @user.present? && !@user.invitee? %>
       <div class="card rounded-box flex-grow place-items-center bg-white shadow-xl">
         <div class="w-full px-4">
           <div class="flex flex-row items-center justify-center text-left md:justify-start md:text-left">
