--- a/app/views/community_posts/index.html.erb
+++ b/app/views/community_posts/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, t(".title")) %>
+<% set_meta_tags title: t(".title") %>
 <div class="w-4xl flex-auto">
   <div class="flex flex-col p-4 max-w-4xl mx-auto">
     <h2 class="title-font text-lg font-semibold"><%= t '.title' %></h2>
