--- a/app/views/community_posts/show.html.erb
+++ b/app/views/community_posts/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, t(".title")) %>
+<% set_meta_tags title: t(".title") %>
 <div class="w-4xl py-4 flex-auto">
   <div class="max-w-4xl mx-auto sm:px-4 pt-5">
     <div class="mb-3">
