--- a/app/views/drink_records/edit.html.erb
+++ b/app/views/drink_records/edit.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, t(".title")) %>
+<% set_meta_tags title: t(".title") %>
 <div class="mx-auto max-w-4xl overflow-hidden bg-base-100 py-4 sm:px-24 sm:py-24 flex-auto">
   <div class="card mx-8 max-w-full rounded-xl bg-white shadow-xl">
     <div class="card-body mx-auto items-center py-6 text-center">
