--- a/app/views/static_pages/privacy_policy.html.erb
+++ b/app/views/static_pages/privacy_policy.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, t(".title")) %>
+<% set_meta_tags title: t(".title") %>
 <div class="mt-12 px-4 md:px-24 min-h-max bg-base-100 flex-auto">
 
 	<h1 class="text-center text-2xl font-bold">プライバシーポリシー</h1>
