--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, t(".title")) %>
+<% set_meta_tags title: t(".title") %>
 <div class="hero bg-base-100 flex-auto" style="background-image: url(<%= asset_path "toppage_sample.jpg" %>);">
   <div class="hero-content max-w-full text-center py-12 bg-opacity-for-topimage">
     <div class="max-w-full">
