--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, @group.name) %>
+<% set_meta_tags title: @group.name %>
 <div class="flex flex-col p-4 md:flex-row md:p-8 flex-auto max-w-6xl mx-auto">
   <div class="flex flex-col md:w-1/3">
     <h2 class="title-font text-lg font-semibold text-neutral-900"><%= t '.group_name' %></h2>
