--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, t(".title")) %>
+<% set_meta_tags title: @user.username + "の" + t(".title") %>
 <div class="w-6xl flex-auto">
   <div class="flex flex-col p-4 md:flex-row md:p-8 max-w-6xl mx-auto">
     <div class="card rounded-box flex-grow place-items-center bg-white shadow-xl md:w-1/3">
