--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -3,6 +3,7 @@
   <div class="card mx-8 max-w-full rounded-xl bg-white shadow-xl">
     <div class="card-body mx-auto items-center py-6 text-center">
       <h2 class="card-title"><%= t '.title' %></h2>
+      <%= render partial: 'shared/error_messages', locals: { object: @group } %>
       <%= render partial: 'groups/form', locals: { group: @group } %>
     </div>
   </div>
