--- a/app/views/drink_records/_form.html.erb
+++ b/app/views/drink_records/_form.html.erb
@@ -1,3 +1,6 @@
+<div class="mx-8">
+  <%= render 'shared/error_messages', object: drink_record %>
+</div>
 <%= form_with model: drink_record, local: true do |f| %>
   <div class="flex flex-col items-center justify-evenly md:flex-row md:content-evenly">
     <%= f.radio_button :record_type, "no_drink", class: "btn btn-outline btn-primary join-item m-4 px-12 js-check", "aria-label": :"休肝日", id: "no-drink-radio" %>
