--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -7,7 +7,7 @@
       <% if @group.group_admin?(current_user) %>
         <div class="text-right">
           <%= link_to (t '.edit'), edit_group_path(@group), class:"btn btn-info btn-sm" %>
-          <%= link_to (t '.delete'), group_path(@group), class:"btn btn-error btn-sm", data: { turbo_method: :delete, confirm: t("defaults.delete_confirm") }  %>
+          <%= link_to (t '.delete'), group_path(@group), class:"btn btn-error btn-sm", data: { turbo_method: :delete, turbo_confirm: t("defaults.delete_confirm") }  %>
         </div>
       <% end %>
     </div>
