--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -3,6 +3,7 @@
   <div class="card mx-8 max-w-full rounded-xl bg-white shadow-xl">
     <div class="card-body mx-auto items-center text-center">
       <h2 class="card-title"><%= t '.title' %></h2>
+      <%= render partial: 'shared/error_messages', locals: {object: @user} %>
       <%= render partial: 'shared/form', locals: {user: @user, url: profile_path} %>
     </div>
   </div>
