--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -104,9 +104,8 @@
     background-color: rgba(255, 255, 255, 0.6);
   }
 
-  .tab:is(input[type=radio]) {
-    width: max-content;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
+  .custom-tab {
+    white-space: nowrap; /* テキストを折り返さない */
+    max-width: max-content;
   }
 }
