--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -19,7 +19,7 @@
   </div>
   <div class="form-control py-2">
     <%= f.label :reminder, class: "label cursor-pointer" %>
-    <%= f.check_box :reminder, as: :boolean , class: "toggle" %>
+    <%= f.check_box :reminder, as: :boolean , class: "toggle toggle-primary" %>
   </div>
   <%= f.hidden_field :first_login, value: false %>
   <div class="card-actions justify-end">
