--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <%= javascript_importmap_tags %>
     <%= javascript_import_module_tag "controllers/alcohol_calculator" %>
     <%= javascript_import_module_tag "controllers/record_form" %>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <%= favicon_link_tag "favicon.ico" %>
   </head>
 
