Fix:トップページの修正（追加機能の説明）

--- a/app/views/profiles/_chart.html.erb
+++ b/app/views/profiles/_chart.html.erb
@@ -1,4 +1,4 @@
-<canvas id="drinkChart" height="400" class="p-4 my-2 rounded-box bg-white shadow-xl w-full" style="display: block; box-sizing: border-box; height: 346px; width: 693px;"></canvas>
+<canvas id="drinkChart" class="p-4 my-2 rounded-box bg-white shadow-xl w-full" style="display: block; box-sizing: border-box; height: 693px; width: 693px;"></canvas>
 <script>
   document.addEventListener("turbo:load", function() {
     var ctx = document.getElementById("drinkChart").getContext('2d');
