--- a/app/views/community_posts/_posts.html.erb
+++ b/app/views/community_posts/_posts.html.erb
@@ -11,7 +11,7 @@
           <div class="font-bold"><%= post.user.username %></div>
           <div class="ml-4 text-neutral-300 text-xs md:text-sm">投稿日: <%= post.created_at.strftime('%Y年%m月%d日') %></div>
         </div>
-        <div class="text-neutral-900"><%= post.content %></div>
+        <div class="text-neutral-900 break-all"><%= safe_join(post.content.split("\n"),tag(:br)) %></div>
       </div> 
     <% end %>
   <% end %>
