--- a/app/views/community_posts/show.html.erb
+++ b/app/views/community_posts/show.html.erb
@@ -38,7 +38,7 @@
                 </div>
               <% end %>
             </div>
-            <div class="my-4 text-neutral-900 text-xl"><%= @community_post.content %></div>
+            <div class="my-4 text-neutral-900 text-xl break-all"><%= safe_join(@community_post.content.split("\n"),tag(:br)) %></div>
             <ul class="list-none">
               <li class="inline-block mr-2 text-neutral-300">投稿日: <%= @community_post.created_at.strftime('%Y年%m月%d日') %></li>
             </ul>
