--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,7 +21,7 @@
                   </div>
               </div>
             </div>
-            <div class="my-4 text-neutral-900 text-xl"><%= @post.content %></div>
+            <div class="my-4 text-neutral-900 text-xl break-all"><%= safe_join(@post.content.split("\n"),tag(:br)) %></div>
             <ul class="list-none">
               <li class="inline-block mr-2 text-neutral-300">記録作成日: <%= @post.drink_record.created_at.strftime('%Y年%m月%d日') %></li>
             </ul>
