Add:サイトマップの追加

--- a/app/views/community_posts/_post_form.html.erb
+++ b/app/views/community_posts/_post_form.html.erb
@@ -7,6 +7,6 @@
     <%= f.text_area :content, class: "textarea h-24 textarea-bordered w-full max-w-full" %>
   </div>
   <div class="card-actions justify-end">
-    <%= f.submit (t 'defaults.register'), class: "btn btn-primary m-8" %>
+    <%= f.submit (t 'defaults.post'), class: "btn btn-primary m-8" %>
   </div>
 <% end %>
